fixed spacing issue
git-svn-id: https://xcmetadataservicestoolkit.googlecode.com/svn/trunk@52 72d1a826-0e72-11de-b5bf-434079a3519f

--- a/src/webapps/MetadataServicesToolkit/page-resources/css/tables.css
+++ b/src/webapps/MetadataServicesToolkit/page-resources/css/tables.css
@@ -6,7 +6,9 @@
   * website http://www.extensiblecatalog.org/. 
   *
   */
- 
+
+
+
  /* this is forms created using tables */
 .basicTable {
 	align: left;
@@ -276,3 +278,5 @@
 	padding-left: 5px;
 	
 }
+
+.clear { clear:both;}
